<resources>
    <string name="app_name">诗文阁</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">随风而行</string>
    <string name="nav_header_subtitle">其他东西</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="left_menu_button_svg">点击打开抽屉</string>
    <string name="load_message_1">书卷多情似故人，晨昏忧乐每相亲。</string>
    <string name="load_message_2">正在加载，请稍后..</string>
    <string name="load_message_3">加载失败，点击重试</string>
    <string name="title_activity_main_login">MainLoginActivity</string>
    <string name="Login">邮箱登录</string>
    <string name="Register">注册</string>
    <string name="otherLogin">第三方登录</string>
    <string name="edit_email">请输入邮箱</string>
    <string name="edit_password">请输入密码</string>
    <string name="Login_true">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_confirm_password">请再次输入密码</string>
    <string name="register_check">检测</string>
    <string name="suibiankankan">随便看看</string>
    <string name="back">返回</string>
    <string name="input_message">请输入相关信息</string>
    <string name="title_activity_edit_user_info">EditUserInfoActivity</string>
    <string name="set_username">设置一个帅气的用户名</string>
    <string name="select_from_photos">从相册选择图片</string>
    <string name="Take_a_photo">拍一张</string>
    <string name="cancel">取消</string>
    <string name="choose_a_way">选择一种方式</string>
    <string name="login_lead_message">登录诗文阁，\n感受诗意人生。</string>
    <string name="login">立即登录</string>
    <string name="add_artical">添加文章</string>
    <string name="artical">文章</string>
    <string name="Edit">随心编辑</string>
    <string name="poems">诗词</string>
    <string name="edit_poem_title">在这里输入标题</string>
    <string name="edit_poem">编辑诗词</string>
    <string name="send_poem">发表</string>
</resources>
