<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/main_navigation_default_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/navigation_top_linearLayout"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white"
            android:id="@+id/left_navigation_user_head"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/default_user_head_img" />

        <TextView
            android:id="@+id/left_navigation_user_name"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_navigation_login_layout"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/login_lead_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/left_navigation_login"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/main_navigation_login"
            android:text="@string/login"
            android:layout_width="80dp"
            android:layout_height="30dp" />
    </LinearLayout>

</LinearLayout>
