<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/shape_dialog"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/post_new_poems"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_add_poetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_artical" />

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/poems"
                    android:textColor="#666"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/post_artical"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_add_artical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_artical" />
                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/artical"
                    android:textColor="#666"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:background="@color/gray"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:gravity="center"
            android:textColor="#666"
            android:textSize="18sp"
            android:padding="16dp"
            android:text="@string/Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</layout>
