<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:background="@color/colorGrey"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/poem_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <ProgressBar
                android:layout_centerHorizontal="true"
                android:id="@+id/poem_load_spinkit"
                android:layout_marginTop="150dp"
                android:indeterminate="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/poem_load_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_message_1"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/poem_load_spinkit"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/poem_load_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_message_2"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/poem_load_textview1"
                android:textSize="16sp"/>
        </RelativeLayout>

        <include
            android:id="@+id/poem_include"
            layout="@layout/poem_board_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--加载失败-->
        <LinearLayout
            android:id="@+id/poem_load_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_marginTop="150dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:src="@drawable/load_err" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/load_message_3"
                android:textSize="14sp" />
        </LinearLayout>

    </FrameLayout>

</layout>