<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.MainLoginActivity"
        tools:showIn="@layout/activity_main_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mainlogin3"
            android:fitsSystemWindows="true">

            <Button
                android:id="@+id/easy_look"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="-1dp"
                android:layout_marginRight="-1dp"
                android:background="@drawable/button_easywatch"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="@string/suibiankankan"
                android:textColor="@drawable/button_easywatch"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/login_back"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="-1dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/button_login_back"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/back"
                android:textColor="@drawable/button_login_back"
                android:visibility="gone"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/login_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="35dp">

                <Button
                    android:id="@+id/Login_first"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_login"
                    android:gravity="center"
                    android:text="@string/Login"
                    android:textColor="@drawable/button_login"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_register"
                    android:gravity="center"
                    android:text="@string/Register"
                    android:textColor="@drawable/button_register"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_real_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/login_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_email"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.1"
                        android:paddingStart="35dp"
                        android:paddingLeft="35dp"
                        tools:targetApi="lollipop"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:src="@drawable/login_email" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_password"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:paddingStart="35dp"
                        android:paddingLeft="35dp"
                        tools:targetApi="lollipop"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:src="@drawable/eye_close" />

                    <TextView
                        android:id="@+id/forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/forget_password"
                        android:textSize="14sp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/login_note_text"
                    android:text="@string/input_message"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/Login_second"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_login"
                    android:gravity="center"
                    android:text="@string/Login_true"
                    android:textColor="@drawable/button_login"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Register_real_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/register_edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="35dp"
                        android:paddingLeft="35dp"
                        android:paddingEnd="55dp"
                        android:paddingRight="55dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:src="@drawable/login_email" />

                    <Button
                        android:id="@+id/register_check_button"
                        android:layout_width="50dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/button_login"
                        android:text="@string/register_check"
                        android:textColor="@drawable/button_login"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/register_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_password"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:paddingStart="35dp"
                        android:paddingLeft="35dp"
                        tools:targetApi="lollipop"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/register_edit_password_img"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/eye_close" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_confirm_password"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:paddingStart="35dp"
                        android:paddingLeft="35dp"
                        tools:targetApi="lollipop"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/register_confirm_password_img"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="2dp"
                        android:layout_marginLeft="2dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/eye_close" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/note_text"
                    android:text="@string/input_message"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/register_second"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/button_login"
                    android:gravity="center"
                    android:text="@string/Register"
                    android:textColor="@drawable/button_login"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/other_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/otherLogin"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/other_login_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/other_login_wechat"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_toStartOf="@id/other_login_qq"
                        android:layout_toLeftOf="@id/other_login_qq"
                        android:src="@drawable/wechat" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/other_login_qq"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/qq" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/other_login_xinlang"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_toEndOf="@id/other_login_qq"
                        android:layout_toRightOf="@id/other_login_qq"
                        android:src="@drawable/xinlang" />
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
